Google Search test Case Submitted

--- a/settings/internal/com.kms.katalon.execution.webui.properties
+++ b/settings/internal/com.kms.katalon.execution.webui.properties
@@ -1,2 +1,7 @@
-#Tue Sep 10 16:32:55 IST 2019
+#Tue Sep 10 16:39:05 IST 2019
 execution.default.selectingCapturedObjectSelectorMethod="XPATH"
+execution.default.webUi.enablePageLoadTimeout=false
+execution.default.webUi.pageLoadTimeout=30
+execution.default.webUi.ignorePageLoadTimeOutException=false
+execution.default.webUi.actionDelay=0
+execution.default.waitForIEHanging=600
